api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: toplard/my-flask-api  # Your Docker image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
