deploy-toplard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toplard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: toplard
  template:
    metadata:
      labels:
        app: toplard
    spec:
      containers:
      - name: toplard
        image: dontrebootme/microbot:v1
#        image: nginx:latest
        ports:
        - containerPort: 80
