deploy-topman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topman
spec:
  replicas: 3
  selector:
    matchLabels:
      app: topman
  template:
    metadata:
      labels:
        app: topman
    spec:
      containers:
      - name: topman
        image: dontrebootme/microbot:v1
#        image: nginx:latest
        ports:
        - containerPort: 80
