service-topman.yaml
apiVersion: v1
kind: Service
metadata:
  name: topman
spec:
  selector:
    app: topman
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
