service-topskin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topskin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: topskin
  template:
    metadata:
      labels:
        app: topskin
    spec:
      containers:
      - name: topskin
         image: dontrebootme/microbot:v1
#         image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: topskin
spec:
  selector:
    app: topskin
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
