servebeer_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servebeer-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    # Rate limiting to prevent DoS attacks
    nginx.ingress.kubernetes.io/limit-rps: "10"
    # Enable OWASP ModSecurity Core Rule Set for WAF
    #nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    #nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"

spec:
  tls:
    - hosts:
      - toplard.servebeer.com
      secretName: toplard-ingress-tls
    - hosts:
      - topman.servebeer.com
      secretName: topman-ingress-tls
    - hosts:
      - topskin.servebeer.com
      secretName: topskin-ingress-tls
  rules:
    - host: toplard.servebeer.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: toplard
                port:
                  number: 80
    - host: topman.servebeer.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: topman
                port:
                  number: 80
    - host: topskin.servebeer.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: topskin
                port:
                  number: 80
